# t-rust-less

./: .gitignore  .travis.yml  Cargo.toml  README.md  build-release.sh  build.rs  install-local.sh  install_local.sh  rustfmt.toml  update-local.sh
.github/workflows/: build.yml  release.yml
builder/: Dockerfile
ci/: script.sh
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  config.rs  error.rs  main.rs
cli/src/cli/: mod.rs
cli/src/commands/: add_identity.rs  completions.rs  export.rs  generate.rs  import.rs  init.rs  list_identities.rs  list_secrets.rs  lock.rs  mod.rs  status.rs  tui.rs  unlock.rs
cli/src/model/: import_v1.rs  import_v2.rs  mod.rs
cli/src/view/: mod.rs  password_view.rs  secret_copy_view.rs  secret_note_view.rs  secret_simple_view.rs  secret_totp_view.rs  secret_type_view.rs  secret_view.rs  status_view.rs
conf/: i3-session.target  sway-session.target  t-rust-less.desktop  t-rust-less.service
daemon/: Cargo.toml  build.rs
daemon/src/: autolock.rs  cli.rs  clipboard_control_impl.rs  error.rs  event_handler_impl.rs  macros.rs  main.rs  processor.rs  secrets_store_impl.rs  service_impl.rs  sync_trigger.rs  unix.rs  windows.rs
experiments/: Cargo.toml
experiments/src/: clipboard.rs  fixtures.rs  main.rs
fixtures/demo/: ring  ring.pub
lib/: Cargo.toml  build.rs
lib/benches/: aes_raw.rs  ciphers.rs  rsa_raw.rs
lib/src/: api.capnp  api_capnp.rs  lib.rs  macros.rs  secrets_store.capnp  secrets_store_capnp.rs
lib/src/api/: api.capnp  capnp_serializable.rs  command.rs  config.rs  event.rs  mod.rs  tests.rs  zeroize_datetime.rs
lib/src/block_store/: error.rs  local_dir.rs  local_wal.rs  memory.rs  mod.rs  model.rs  sled.rs  sync.rs  tests.rs
lib/src/block_store/dropbox/: initialize.rs  mod.rs
lib/src/block_store/sync/: mod.rs  synchronize.rs  synchronize_tests.rs
lib/src/clipboard/: debounce.rs  error.rs  mod.rs  selection_provider_holder.rs  unix.rs  unix_mixed.rs  unix_none.rs  unix_wayland.rs  unix_x11.rs  unix_xcb.rs  windows.rs
lib/src/memguard/: alloc.rs  bytes.rs  memory.rs  mod.rs  weak.rs  words.rs  zeroize_buffer.rs
lib/src/otp/: error.rs  hotp.rs  mod.rs  tests.rs  totp.rs
lib/src/secrets_store/: auto_locker.rs  error.rs  index.rs  index_tests.rs  mod.rs  multi_lane.rs  secrets_store.capnp  tests.rs
lib/src/secrets_store/cipher/: fixture_tests.rs  mod.rs  openssl_rsa_aes_gcm.rs  rust_argon2id.rs  rust_rsa_aes_gcm.rs  rust_x25519_chacha20_poly1305.rs  tests.rs
lib/src/secrets_store/estimate/: mod.rs  zxcvbn.rs
lib/src/secrets_store/padding/: mod.rs  non_zero.rs  random_front_back.rs  tests.rs
lib/src/service/: config.rs  error.rs  local.rs  mod.rs  remote.rs  secrets_provider.rs  service.capnp  synchronizer.rs  unix.rs  windows.rs
lib/src/service/pw_generator/: chars.rs  mod.rs  wordlist.rs  words.rs
lib/src/store/: memory.rs  mod.rs  tests.rs
native/: Cargo.toml
native/src/: input.rs  main.rs  messages.rs  output.rs  processor.rs
src/: main.rs
src/api/: mod.rs
src/cli/: mod.rs
src/clipboard/: mod.rs  unix.rs
src/ex_crypto/: error.rs  mod.rs  scrypt.rs  scrypt_stream.rs  tests.rs
src/ex_crypto/openpgp/: entry.rs  mod.rs
src/ex_crypto/openpgp/packet/: ecc_curve.rs  hash.rs  keys.rs  mod.rs  parse.rs  sig.rs  symmetric.rs  tags.rs  tests.rs  util.rs
src/memguard/: alloc.rs  linux.rs  memory.rs  mod.rs
src/protos/: secrets.rs
src/secret_store/: error.rs  mod.rs  secret_store.capnp
src/secret_store/cipher/: mod.rs  openssl_rsa_aes_gcm.rs  rust_argon2i.rs  rust_x25519_chacha20_poly1305.rs  tests.rs
src/secret_store/padding/: non_zero.rs  tests.rs
src/secrets/: error.rs  mod.rs  pgp.rs  secrets.capnp
src/secrets_store/: dual_lane.rs  error.rs  mod.rs  multi_lane.rs
src/secrets_store/cipher/: mod.rs  openssl_rsa_aes_gcm.rs  rust_argon2i.rs  rust_x25519_chacha20_poly1305.rs  tests.rs
src/secrets_store/padding/: mod.rs  non_zero.rs
src/store/: error.rs  local_dir.rs  memory.rs  mod.rs  model.rs  tests.rs
synctool/: Cargo.toml
synctool/src/: error.rs  lib.rs  main.rs  remote_fs.rs
synctool/src/cli/: initialize.rs  mod.rs  sync.rs
synctool/src/dropbox/: initialize.rs  mod.rs
synctool/src/layout/: local_dir.rs  mod.rs
synctool/src/pcloud/: initialize.rs  mod.rs
