[workspace]
members = ["lib", "cli", "daemon", "native", "experiments"]
resolver = "2"

[workspace.package]
version = "0.2.19"

[workspace.dependencies]
log = "0"
rmp-serde = "0"
zeroize = "1"
zeroize_derive = "1"
byteorder = "1"
serde = "1"
serde_json = "1"
chrono = "0"
env_logger = "0"
clap = "4"
clap_complete = "4"
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
debug = false
lto = false

[patch.crates-io]
# x25519-dalek = { git = "https://github.com/untoldwind/x25519-dalek.git"}
# openssl = { git = "https://github.com/untoldwind/rust-openssl.git" }
