[workspace]
members = ["lib", "cli", "daemon", "native", "experiments"]
resolver = "2"

[workspace.package]
version = "0.2.23"

[workspace.dependencies]
anyhow = "1"
byteorder = "1"
chrono = "0"
clap = "4"
clap_complete = "4"
env_logger = "0"
log = "0"
rmp-serde = "0"
serde = "1"
serde_json = "1"
thiserror = "1"
zeroize = "1"
zeroize_derive = "1"

[profile.release]
opt-level = 3
debug = false
lto = false
