[package]
name = "t-rust-less"
version = "0.1.1"
authors = ["Untoldwind <landru@untoldwind.net>"]
build = "build.rs"
edition = "2018"

[dependencies]
log = "0"
env_logger = "0"
clap = { version = "2", default-features = false, features = ["suggestions", "color"]}
cursive = { version = "0", default-features = false, optional = true }
termion = { version = "1", optional = true }
atty = "0.2"
t-rust-less-lib = { path = "../lib" }
serde = "1"
serde_derive = "1"
rand = "0.7"
dirs = "2"
url = "2"
crossterm_style = "0"
serde_json = "1"
chrono = { version = "0", features = ["serde"] }

[features]
termion_backend = ["termion", "cursive/termion-backend", "cursive/toml"]
crossterm_backend = ["cursive/crossterm-backend", "cursive/toml"]
default = ["crossterm_backend"]

[dev-dependencies]
tempdir = "0"
spectral = "0"

[build-dependencies]
clap = { version = "2", default-features = false, features = ["suggestions", "color"]}
