[package]
name = "t-rust-less"
version.workspace = true
authors = ["Untoldwind <landru@untoldwind.net>"]
edition = "2021"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive"] }
clap_complete = { workspace = true }
cursive = { version = "0", default-features = false, optional = true }
termion = { version = "3", optional = true }
atty = "0.2"
t-rust-less-lib = { path = "../lib" }
serde = { workspace = true, features = ["derive"] }
rand = "0.8"
dirs = "5"
url = "2"
crossterm_style = "0"
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
zeroize = { workspace = true }
zeroize_derive  = { workspace = true }

[features]
termion_backend = ["termion", "cursive/termion-backend", "cursive/toml"]
crossterm_backend = ["cursive/crossterm-backend", "cursive/toml"]
default = ["crossterm_backend"]

[dev-dependencies]
tempfile = "3"
spectral = "0"

[build-dependencies]
clap = { version = "2", default-features = false, features = ["suggestions", "color"]}
