[package]
name = "t-rust-less"
version.workspace = true
authors = ["Untoldwind <landru@untoldwind.net>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
atty = "0.2"
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["cargo", "derive"] }
clap_complete = { workspace = true }
crossterm_style = "0"
cursive = { version = "0", default-features = false, optional = true }
dirs = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
t-rust-less-lib = { path = "../lib" }
termion = { version = "4", optional = true }
url = { workspace = true }
zeroize = { workspace = true }
zeroize_derive = { workspace = true }

[features]
termion_backend = ["termion", "cursive/termion-backend", "cursive/toml"]
crossterm_backend = ["cursive/crossterm-backend", "cursive/toml"]
default = ["crossterm_backend"]

[dev-dependencies]
tempfile = "3"
spectral = "0"
