[package]
name = "t-rust-less-daemon"
version.workspace = true
authors = ["Untoldwind <landru@untoldwind.net>"]
build = "build.rs"
edition = "2021"

[dependencies]
chrono = { workspace = true }
clap = { version = "2", default-features = false, features = [
    "suggestions",
    "color",
] }
env_logger = { workspace = true }
futures = "0.3"
log = { workspace = true }
rmp-serde = { workspace = true }
t-rust-less-lib = { path = "../lib" }
tokio = { version = "1", features = ["full"] }
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0"
systemd-journal-logger = "0"

[build-dependencies]
clap = { version = "2", default-features = false, features = [
    "suggestions",
    "color",
] }
