[package]
name = "t-rust-less-experiments"
version.workspace = true
authors = ["Untoldwind <landru@untoldwind.net>"]
edition = "2018"

[dependencies]
log = "0"
env_logger = "0"
t-rust-less-lib = { path = "../lib", features = ["with_x11", "with_wayland", "rust_crypto", "dropbox"], default-features = false }
serde = { version = "1", features = ["derive"] }
rand = "0.8"
dirs = "1"
url = "2"
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
hex = "0"
capnp = "0.19"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
spectral = "0"
