[package]
name = "t-rust-less-lib"
version = "0.2.2"
authors = ["Untoldwind <landru@untoldwind.net>"]
build = "build.rs"
edition = "2018"
description = "Password manager library"
license = "MIT"
repository = "https://github.com/untoldwind/t-rust-less"
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2"
openssl = { version = "0", features = ["vendored"], optional = true }
byteorder = "1"
chrono = { version = "0", features = ["serde"] }
url = "2"
num-derive = "0"
num-traits = "0"
sha-1 = "0"
sha2 = "0"
hmac = "0"
x25519-dalek-ng = "1"
chacha20-poly1305-aead = "0"
capnp = "0.14"
rand = "0.8"
rust-argon2 = "0"
zxcvbn = "2"
log = "0"
sublime_fuzzy = "0"
itertools = "0"
toml = "0"
dirs = "2"
futures = "0.3"
tokio = { version = "1", features = ["net", "rt" ] }
tokio-util = { version = "0.6", features = ["compat"] }
zeroize = "1"
zeroize_derive  = "1"
rsa = { version = "0.4", optional = true }
aes-gcm = { version = "0", optional = true }
rmp-serde = "0"

[dev-dependencies]
tempfile = "3"
spectral = "0"
quickcheck = "0"
byteorder = "1"
hex-literal = "0"

[features]
with_x11 = ["x11"]
rust_crypto = ["rsa", "aes-gcm"]
default = ["with_x11", "rust_crypto"]

[target.'cfg(unix)'.dependencies]
x11 = { version = "2", features = ["xlib"], optional = true }
libc = "0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach_o_sys = "0"

[build-dependencies]
clap = { version = "2", default-features = false, features = ["suggestions", "color"]}
capnpc = "0.14"
