[package]
name = "t-rust-less-lib"
version.workspace = true
authors = ["Untoldwind <landru@untoldwind.net>"]
build = "build.rs"
edition = "2021"
description = "Password manager library"
license = "MIT"
repository = "https://github.com/untoldwind/t-rust-less"
readme = "../README.md"

[dependencies]
aes-gcm = { version = "0", optional = true }
byteorder = { workspace = true }
capnp = "0.19"
chacha20-poly1305-aead = "0"
chrono = { workspace = true, features = ["serde"] }
data-encoding = "2"
dirs = "6"
dropbox-sdk = { version = "0", optional = true }
futures = "0.3"
hmac = "0.12"
itertools = "0"
log = { workspace = true }
num-derive = "0"
num-traits = "0"
openssl = { version = "0", features = ["vendored"], optional = true }
pcloud = { version = "3", optional = true }
rand = "0.8"
rmp-serde = { workspace = true }
rsa = { version = "0.9", optional = true }
rust-argon2 = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha-1 = "0.10"
sha2 = "0.10"
sled = { version = "0", optional = true }
specta = { version = "2.0.0-rc", features = ["chrono"], optional = true }
sublime_fuzzy = "0"
thiserror = { workspace = true }
tiny_http = { version = "0", optional = true }
tokio = { version = "1", features = ["net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0"
typenum = "1"
url = "2"
x25519-dalek-ng = "1"
zeroize = { workspace = true }
zeroize_derive = { workspace = true }
zxcvbn = "2"

[dev-dependencies]
byteorder = "1"
hex-literal = "0"
quickcheck = "1"
spectral = "0"
tempfile = "3"

[features]
default = ["with_x11", "with_wayland", "rust_crypto"]
dropbox = ["dropbox-sdk", "tiny_http"]
nightly-features = []
rust_crypto = ["rsa", "aes-gcm"]
use_os = []
with_sled = ["sled"]
with_specta = ["specta"]
with_wayland = ["wayland-client", "wayland-protocols", "wayland-protocols-wlr"]
with_x11 = ["x11"]

[target.'cfg(all(unix, not(target_os="android")))'.dependencies]
x11 = { version = "2", features = ["xlib"], optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["client"], optional = true }
wayland-protocols-wlr = { version = "0.2", features = [
    "client",
], optional = true }
libc = "0"

[target.'cfg(target_os="android")'.dependencies]
libc = "0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi"] }
named_pipe = "0"
clipboard-win = "4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach_o_sys = "0"

[build-dependencies]
clap = { version = "2", default-features = false, features = [
    "suggestions",
    "color",
] }
capnpc = "0.19"
