[package]
name = "t-rust-less-native"
version = "0.2.13"
authors = ["Untoldwind <landru@untoldwind.net>"]
edition = "2018"

[dependencies]
log = "0"
env_logger = "0"
t-rust-less-lib = { path = "../lib" }
serde = { version = "1", features = ["derive"] }
byteorder = "1"
serde_json = "1"
zeroize = "1"
zeroize_derive  = "1"

[dev-dependencies]
spectral = "0"
