[package]
name = "t-rust-less-native"
version.workspace = true
authors = ["Untoldwind <landru@untoldwind.net>"]
edition = "2021"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
t-rust-less-lib = { path = "../lib" }
serde = { workspace = true, features = ["derive"] }
byteorder = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
zeroize_derive  = { workspace = true }

[dev-dependencies]
spectral = "0"
