[package]
name = "t-rust-less-synctool"
version.workspace = true
authors = ["Untoldwind <landru@untoldwind.net>"]
edition = "2021"
license = "MIT"

[dependencies]
t-rust-less-lib = { path = "../lib" }

anyhow = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "env"] }
const-hex = { version = "1", optional = true }
chrono = { workspace = true }
dialoguer = "0"
dropbox-sdk = { version = "0", optional = true, features = ["default_async_client"] }
env_logger = { workspace = true }
futures = "0"
log = { workspace = true }
open = "5"
pcloud = { version = "3", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sha1 = { version = "0", optional = true }
thiserror = { workspace = true }
tiny_http = { version = "0", optional = true }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tokio-util = "0"
url = { workspace = true }
zeroize = { workspace = true }

[features]
default = ["dropbox", "pcloud"]
dropbox = ["dep:dropbox-sdk", "dep:tiny_http"]
pcloud = ["dep:pcloud", "dep:sha1", "dep:serde", "dep:const-hex"]

[lib]
name = "t_rust_less_synctool"
path = "src/lib.rs"

[[bin]]
name = "t-rust-less-synctool"
path = "src/main.rs"
